# bazel-python-template

./: MODULE.bazel  README.md  README.org  WORKSPACE  requirements.in  requirements.txt
lib/package1/: BUILD
test/: BUILD  test_package1.py
